--- a/style.css
+++ b/style.css
@@ -102,19 +102,18 @@ h3#enter {
 /*****     DEBUT    TASK LIST SECTION       *****/
 
 h2#showName {
-	font-size: 2rem;
-    font-weight: 300;
-    line-height: 2.5;
+	font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 3.5;
 }
 
 #taskForm button {
     border-radius: 2px;
-    /* height: 50px; */
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Open Sans', serif;
     font-weight: 400;
-    font-size: 0.87rem;
+    font-size: 1rem;
     letter-spacing: 0.1em;
-    padding: 1rem;
+    padding: .8rem;
 }
 
 #taskForm #addTask::before {
