--- a/style.css
+++ b/style.css
@@ -40,16 +40,19 @@ div.d-flex.align-items-center {
 	height: 100%;
 }
 
-h3#enter {
-	color: #000;
+#loginForm h1 {
+	line-height: 2;
     text-shadow: 0px 0px 1px #080e0e;
+}
+h3#enter {
     font-weight: 400;
-    font-family: 'Roboto Slab', serif;
 	font-size: 2rem;
 }
 
 #loginForm {
 	height: 100%;
+	/* color: #000; */
+	font-family: 'Roboto Slab', serif;
 }
 
 #loginForm form {
